# river

./: Cargo.toml  build.rs  readme.md
examples/: consumer.rs  producer.rs  protobuf.rs
kafka/: akqh.yaml
proto/: test.proto
src/: lib.rs  main.rs
src/core/: mod.rs
src/domain/: proto.rs
src/messaging/: mod.rs
src/messaging/kafka/: consumer.rs  producer.rs  publisher.rs  subscriber.rs
