[package]
name = "river"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = ">=1.11.0"
log = ">=0.4.29"
prost = ">=0.14.1"
prost-types = ">=0.14.1"
rdkafka = { version = ">=0.38", features = ["dynamic-linking"] }
serde = ">=1.0.228"
serde_json = ">=1.0.145"
std-logger = ">=0.5.7"
tokio =  { version = ">=1", features = ["full"] }
tokio-stream = ">=0.1.17"
tracing = ">=0.1.43"

[build-dependencies]
prost-build = ">=0.14.1"
